выполнено 4 из 6 (отображение постов в профиле -> /profile/)

--- a/newsnetwork/templates/post.html
+++ b/newsnetwork/templates/post.html
@@ -1,6 +1,8 @@
-<h2>{{post.name}}</h3>
-<h4>автор: <i> {{post.author}}</i></h4>
-<h4>опубликовано: {{post.addedDatetime}}</h4>
-
-<p>{{post.text}} </p>
-<p><img src="{{post.image.url}}" alt="image"  style="max-width:600px;max-height:400px;width:100%"  /></p>
+<h2>{{post.name}} </h3>
+{% if not post.moderated %}(ещё не проверено!){% endif %}
+<hr>
+<p>автор: <i> <b> {{post.author}}</b></i>; опубликовано: {{post.addedDatetime}}</p>
+<hr>
+{% if post.text %}<p>{{post.text}} </p>{% endif %} 
+{% if post.image%}<p> <img src="{{post.image.url}}" alt="image" 
+ style="max-width:600px; max-height:400px;width:100%"  /></p>{% endif %} 
