--- a/newsnetwork/templates/addNews.html
+++ b/newsnetwork/templates/addNews.html
@@ -1,6 +1,8 @@
-
 <form enctype="multipart/form-data" action="{{actionPath}}" method="POST">
 {% csrf_token %} 
+{% if form.errors %}
+    <ul><li>Текст и изображение не могут быть одновременно пустыми! </li></ul>
+{% endif %}
 {%for filed in form %}
     <p>{{filed.label}}<br>{{filed}}</p>
 {% endfor %}
